--- a/assets/scss/_mediaQuery.scss
+++ b/assets/scss/_mediaQuery.scss
@@ -1,5 +1,5 @@
-$smartphone-width : 320px;
-$tablet-width: 768px;
+$smartphone-width : 769px;
+$tablet-width: 769px;
 
 @mixin media($max){
     @media (max-width: $max){
@@ -7,7 +7,7 @@ $tablet-width: 768px;
     }
 }
 
-@mixin smartphone {
+@mixin mainBreakPoint {
     @include media($smartphone-width) {
         @content;
     }
