ajout d'un second breakpoint et de la section formation

--- a/assets/scss/_colors.scss
+++ b/assets/scss/_colors.scss
@@ -1,5 +1,6 @@
 $colorPrimary : #424242;
 $colorPrimaryDark: #212121;
 $navigationBarColor: $colorPrimaryDark;
+$colorAccent: rgb(44, 156, 122);
 $windowBackground: #E0E0E0;
 $textColorPrimary: #FAFAFA;
