--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -46,6 +46,7 @@ header {
             li {
                 margin: 0;
                 padding: 0;
+                list-style: none;
                 display: inline-block;
 
                 @include mainBreakPoint {
