--- a/assets/scss/design.scss
+++ b/assets/scss/design.scss
@@ -17,7 +17,6 @@
         background-color: white;
         box-shadow: 0px 0px 3px $colorPrimary;
         border-radius: 2px;
-        overflow: hidden;
 
         h1 {
             font-weight: normal;
@@ -55,9 +54,56 @@
             width: 50%;
             background-color: $windowBackground;
             float: right;
+
+            @include secondBreakPoint {
+                width: auto;
+                margin: 0;
+                display: none;
+            }
         }
         section {
-            clear: right;
+            clear: both;
+            padding: $default-padding;
+            margin: 0;
+            ul {
+                margin: 0;
+
+                li {
+                    list-style: none;
+                    padding: $default-padding;
+                    position: relative;
+
+                    &::after {
+                        content: "";
+                        position: absolute;
+                        left: - $default-padding * 2;
+                        top: $default-padding / 2;
+                        width: $default-padding * 2;
+                        height: $default-padding * 2;
+                        background-color: $colorPrimary;
+                        border-radius: 50%;
+                    }
+
+                    &:nth-child(1)::after {
+                        background-color: $colorAccent;
+                    }
+
+                    &::before {
+                        content: "";
+                        position: absolute;
+                        left: - $default-padding - 2px;
+                        top: $default-padding / 2;
+                        width: 1px;
+                        height: 100%;
+                        border-left: 3px solid $colorPrimaryDark;
+                    }
+
+                    &:last-child::before {
+                        border-left: 3px dotted $colorPrimary;
+                        opacity: 0.8;
+                    }
+                }
+            }
         }
     }
 }
