--- a/assets/scss/_page.scss
+++ b/assets/scss/_page.scss
@@ -2,25 +2,34 @@
 @import "dimen";
 @import "colors";
 
+/**
+ * Define position, size, overflow property, margin and padding only.
+ * Color and other properties are defined separately for each page.
+ */
+
 .page {
     position: absolute;
     width: 100%;
     height: 100%;
+    overflow: auto;
 
     @include mainBreakPoint {
         position: relative;
         height: auto;
         min-height: 100vh;
+        padding-bottom: 0;
     }
 
     .content-wrapper {
+        transition: all 0.5s linear;
         position: relative;
-        padding: $default-content-margin;
-        padding-top: $default-content-margin-top;
+        margin: $default-content-margin;
+        // margin-top: $default-content-margin-top;
+        margin-top: $default-content-margin-top;
 
         @include mainBreakPoint {
-            padding: 0;
-            padding-top: $default-content-margin-top;
+            margin: 0;
+            margin-top: $default-content-margin-top;
         }
 
         .content {
