ajustement margin-left section formation

--- a/assets/scss/design.scss
+++ b/assets/scss/design.scss
@@ -104,6 +104,7 @@
                 clear: left;
                 padding: $default-padding;
                 margin: 0;
+                margin-left: $default-padding * 2;
                 ul {
                     margin: 0;
                     padding-left: $default-padding * 2;
