--- a/assets/scss/_page.scss
+++ b/assets/scss/_page.scss
@@ -11,7 +11,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow-y: auto;
 
     @include mainBreakPoint {
         position: relative;
