fix problème avec les mediaqueries et insertion en ligne de translate via js.

--- a/assets/scss/_globalInit.scss
+++ b/assets/scss/_globalInit.scss
@@ -10,6 +10,8 @@ html {
 body {
     margin: 0;
     padding: 0;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 html, body, div, section, a, ul, li, p, h1, header, nav {
