ajout de la propriété 'outline: none' sur les éléments du menu

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -60,6 +60,7 @@ header {
                     &:visited, &:link, & {
                         text-decoration: none;
                         color: $textColorPrimary;
+                        outline: none;
                     }
                 }
             }
