--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,8 +1,9 @@
 @import "mediaQuery";
 @import "colors";
 @import "dimen";
+@import "../../bower_components/bourbon/app/assets/stylesheets/_bourbon.scss";
 
-$nav-off-width: 320px;
+$nav-off-width: 240px;
 $toggle-nav-width: 64px;
 
 header {
@@ -10,14 +11,17 @@ header {
     margin: 0;
     padding: 0;
     width: 100%;
-    left: 0;
     z-index: 42;
     background-color: $navigationBarColor;
+    @include transition(transform 0.3s linear);
+    @include transform(translateX(0));
+    @include transform(translate3d(240,0,0));
 
     @include mainBreakPoint {
         width: $nav-off-width;
         height: 100%;
-        left: - $nav-off-width;
+        @include transform(translateX(- $nav-off-width));
+        @include transform(translate3d(- $nav-off-width,0,0));
     }
 
     #toggle-nav {
@@ -31,6 +35,33 @@ header {
 
         @include mainBreakPoint {
             display: block;
+        }
+        #burger-wrapper {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            @include transition(transform 0.3s linear);
+
+            .burger {
+                background-color: $textColorPrimary;
+                height: 2px;
+                width: 50%;
+                left: 25%;
+                position: absolute;
+                @include transition(transform 0.3s linear, width 0.3s linear);
+
+                &:nth-child(1) {
+                    top: 33.3%;
+                }
+
+                &:nth-child(2) {
+                    top: 50%;
+                }
+
+                &:nth-child(3) {
+                    top: 66.6%;
+                }
+            }
         }
     }
 
