--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -79,6 +79,7 @@ header {
                 padding: 0;
                 list-style: none;
                 display: inline-block;
+                position: relative;
 
                 @include mainBreakPoint {
                     display: block;
@@ -88,18 +89,49 @@ header {
                     display: block;
                     line-height: $default-padding;
                     padding: $default-padding;
+                    position: relative;
                     &:visited, &:link, & {
                         text-decoration: none;
                         color: $textColorPrimary;
                         outline: none;
                     }
-                    &:hover > i {
-                        @include transition(color 0.3s linear);
-                        color: $colorAccent;
+                }
+
+                /* effect useless on small screen */
+                @include minMainBreakPoint {
+                    /* base effect */
+                    &::after, &::before {
+                        @include transition(all 0.3s linear);
+                        background-color: transparent;
+                        position: absolute;
+                        content: '';
                     }
-                    &:active , &.active {
-                        @include transition(color 0.3s linear);
-                        color: $colorAccent;
+                    &::after {
+                        left: 0;
+                        width: 100%;
+                        height: 1px;
+                        bottom: $default-padding / 1.5;
+                    }
+                    &:first-child::before, &:last-child::before {
+                        width: 1px;
+                        top: 0;
+                        bottom: $default-padding / 2.5;
+                    }
+                    &:first-child::before {
+                        left: 0;
+                    }
+                    &:last-child::before {
+                        right: $default-padding - 15px;
+                    }
+                    /* on hover and when active */
+                    &.active::before, &.active::after, &:hover::before, &:hover::after {
+                        background-color: $colorAccent;
+                    }
+                    &:first-child.active::before, &:first-child:hover::before {
+                        left: $default-padding / 2;
+                    }
+                    &:last-child.active::before, &:last-child:hover::before {
+                        right: $default-padding - 5px;
                     }
                 }
             }
