--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -6,6 +6,38 @@
 $nav-off-width: 240px;
 $toggle-nav-width: 64px;
 
+@include keyframes(ripple) {
+    0% {
+        left: 50%;
+        top: 50%;
+        width: 0%;
+        height: 0%;
+        @include border-top-radius(50%);
+        @include border-left-radius(50%);
+        @include border-right-radius(50%);
+        @include border-bottom-radius(50%);
+        background-color: rgba($colorAccent, 0.6);
+    }
+    80% {
+        @include border-top-radius(50%);
+        @include border-left-radius(50%);
+        @include border-right-radius(50%);
+        @include border-bottom-radius(50%);
+    }
+    100% {
+        left: 0%;
+        top: 0%;
+        width: 100%;
+        height: 100%;
+        @include border-top-radius(0%);
+        @include border-left-radius(0%);
+        @include border-right-radius(0%);
+        @include border-bottom-radius(0%);
+        background-color: rgba($colorAccent, 0.0);
+    }
+}
+
+
 header {
     position: fixed;
     margin: 0;
@@ -86,7 +118,7 @@ header {
                 }
 
                 a {
-                    display: block;
+                    display: inline-block;
                     line-height: $default-padding;
                     padding: $default-padding;
                     position: relative;
@@ -95,43 +127,16 @@ header {
                         color: $textColorPrimary;
                         outline: none;
                     }
-                }
-
-                /* effect useless on small screen */
-                @include minMainBreakPoint {
-                    /* base effect */
-                    &::after, &::before {
-                        @include transition(all 0.3s linear);
-                        background-color: transparent;
-                        position: absolute;
+                    &.ripple::after {
                         content: '';
-                    }
-                    &::after {
-                        left: 0;
-                        width: 100%;
-                        height: 1px;
-                        bottom: $default-padding / 1.5;
-                    }
-                    &:first-child::before, &:last-child::before {
-                        width: 1px;
-                        top: 0;
-                        bottom: $default-padding / 2.5;
-                    }
-                    &:first-child::before {
-                        left: 0;
-                    }
-                    &:last-child::before {
-                        right: $default-padding - 15px;
-                    }
-                    /* on hover and when active */
-                    &.active::before, &.active::after, &:hover::before, &:hover::after {
-                        background-color: $colorAccent;
-                    }
-                    &:first-child.active::before, &:first-child:hover::before {
-                        left: $default-padding / 2;
-                    }
-                    &:last-child.active::before, &:last-child:hover::before {
-                        right: $default-padding - 5px;
+                        position: absolute;
+                        z-index: -1;
+                        @include animation-name(ripple);
+                        @include animation-duration(0.7s);
+                        @include animation-timing-function(linear);
+                        @include animation-iteration-count(infinite);
+                        @include animation-direction(normal);
+                        @include animation-fill-mode(backwards);
                     }
                 }
             }
