maj project style, translateX content when appear

--- a/assets/scss/_globalInit.scss
+++ b/assets/scss/_globalInit.scss
@@ -14,6 +14,6 @@ body {
     overflow-x: hidden;
 }
 
-html, body, div, section, a, ul, li, p, h1, header, nav {
+html, body, div, section, aside, a, ul, li, p, h1, header, nav {
     box-sizing: border-box;
 }
