--- a/assets/scss/_page.scss
+++ b/assets/scss/_page.scss
@@ -13,6 +13,7 @@
     width: 100%;
     height: 100%;
     overflow-y: auto;
+    overflow-x: hidden;
     @include transition(transform 0.3s linear);
 
     @include mainBreakPoint {
